edit the delete button to enable deletion of every quote and use css to fix the horizontal overflow on the page

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,7 +4,8 @@
     background-image: url(../../assets/homeBgImg1.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    background-attachment: scroll;
+    background-attachment: fixed;
+    overflow-x: hidden;
     color: #333;
     font-family: 'Courgette', cursive;
 }
